--- a/mycapstone/templates/home.html
+++ b/mycapstone/templates/home.html
@@ -132,7 +132,11 @@
       </div>
     <br>
 <footer>
-  copyrights reserverd by bhavika Patel
+ <!-- Copyright -->
+ <div class="text-center p-3" style="background-color: rgb(219, 219, 219); color: rgb(0, 0, 0)";>
+  © 2021 Copyright: Lethal Learners
+</div>
+<!-- Copyright -->
 </footer>
     
 
