--- a/mycapstone/templates/file.html
+++ b/mycapstone/templates/file.html
@@ -24,6 +24,13 @@
 <div class="container" >
   <h3>Download Template to get Mortality </h3>
   <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+  <a href={{url}}> <button href={{url}}>Sample Template</button> </a>
+  <form method="post" enctype="multipart/form-data">
+    <input type="file" name="myfile">
+    <button type="submit">Upload</button>
+  </form>
+
+  <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
 </div>
 
 </body>
