--- a/mycapstone/templates/home.html
+++ b/mycapstone/templates/home.html
@@ -15,14 +15,14 @@
 <body >
     <div style="background-color:black; color: rgb(185, 184, 184); text-align: center;">
         <h1>Mortality Information</h1>
-        <p>Based on COVID-19</p>
+        <p>Based on COVID-19 Data</p>
         <!-- <div class="cointainer"> -->
         <img src="https://www.fredhutch.org/content/dam/www/homepage/formlette/2020-March/formlette-covid-19-desktop-3-2020.jpg" alt="Covid" style="width:100%">
     </div>
     <br>
     <br>
       <div class="col-sm-6 offset-md-1">
-          <h2 style="color:#3ba5ad">Canada COVID-19 Summary</h2>
+          <h2 style="color:#3ba5ad">Canadian COVID-19 Data Analysis</h2>
           </br>
       </div>
     <!-- current cases data -->
