Title name changed

--- a/mycapstone/templates/home.html
+++ b/mycapstone/templates/home.html
@@ -124,7 +124,7 @@
                   <h4 class="card-title">Check Mortality with Personal Data</h4>
                   <p class="card-text">You would be able to determine mortality by giving personal data.</p>
                   <p class="card-text"><small class="text-muted">All Representations are based on static dataset. Read more about the it.</small></p>
-                  <a href="upload" class="btn btn-info">Let's See</a>
+                  <a href="predict" class="btn btn-info">Let's See</a>
                 </div>
               </div>
           </div>
