--- a/mycapstone/templates/predict.html
+++ b/mycapstone/templates/predict.html
@@ -1,6 +1,26 @@
 <html>
+    <head>
+        <title>File Upload</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+      </head>
 
 <body>
+
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="./">Mortality</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="./">Home</a></li>
+          </ul>
+        </div>
+      </nav>
     <form action="/predict_post" method="get">
         Gender:
         <select name="gender" id="gender">
@@ -24,7 +44,7 @@
             <option value="9">Not Sure</option>
         </select> <br />
       	
-        Regin: 
+        Region: 
         <select name="region" id="region">
             <option value="1">Atlantic (New Brunswick, Nova Scotia, Prince Edward Island, Newfoundland and Labrador)</option>
             <option value="2">Quebec</option>
